@@ -33,4 +33,5 @@ EXTRA_DIST = \
 	$(pcmanx_DATA) \
 	$(pcmanx_script_DATA) \
 	$(pcmanx_nancy_DATA) \
-	pcmanx.png
+	pcmanx.png \
+	pcmanx.svg
